src/styles/_toastic.scss
.Toastic {
  box-sizing: border-box;
  position: relative;
  display: flex;
  align-items: center;
  gap: 8px;
  font-weight: 500;
  z-index: var(--react-toastic-zindex);
  color: var(--react-toastic-color-black);
  background: var(--react-toastic-color-white);
  padding: 14px 8px 14px 12px;
  border-radius: 8px;
  margin: 10px 10px 10px 0 ;
  box-shadow: var(--react-toastic-shadow);
  overflow: hidden;
  min-width: 250px;
  max-width: 400px;

  &:hover {
    *:not(.Toastic__progress) {
      animation: none;
    }
  }

  &-pauseOnHover {
    &:hover {
      .Toastic__progress {
        animation-play-state: paused;
      }
    }
  }

  &__content {
    font-size: 14px;
    line-height: 18px;
    flex: 1;
  }

  &__title {
    font-weight: 600;
    font-size: 16px;
    line-height: 20px;
    margin: 0;
  }

  &__close {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-shrink: 0;
    align-self: stretch;
    cursor: pointer;
    border: none;
    height: 20px;
    width: 20px;
    background: transparent;
    padding: 0;
    margin: 0;
    transition: all 0.3s ease-in-out;

    svg {
      width: 16px;
      height: 16px;
    }

    &:hover {
      transform: rotate(90deg);
    }
  }

  &__progress {
    position: absolute;
    height: 4px;
    width: 100%;
    left: 0;
    bottom: 0;
    background: var(--react-toastic-color-black);
    opacity: 1;
    animation-name: ToasticProgress;
    animation-timing-function: linear;
    animation-fill-mode: forwards;
    animation-delay: 0.3s;
  }

  @media (max-width: 768px) {
    margin: 10px 0;
    max-width: 100vw;
    width: 100vw;
  }

}

